[package]
name = "cffc"
version = "0.1.0"
authors = ["gopher9527 <gopher9527@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
clap = "2.33.3"
lazy_static = "1.4.0"
serde = {version = "1.0.125", features = ["derive"]}
serde-transcode = "1.1.0"
serde_json = "1.0.64"
serde_yaml = "0.8.17"
tera = "1.8.0"
tokio = { version = "1.5.0", features = ["full"] }
toml = "0.5.8"
