[package]
name = "cffc"
version = "0.1.0"
authors = ["gopher9527 <gopher9527@gmail.com>"]
edition = "2018"
license = "MIT License"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.95"
serde = { version = "1.0.125", features = ["derive"] }
serde-transcode = "1.1.0"
serde_json = "1.0.64"
serde_yaml = "0.8.17"
toml = "0.5.8"
